--- a/html/print.html
+++ b/html/print.html
@@ -5,16 +5,16 @@
         </title>
         <meta charset ="UTF-8">
         <meta viewport="width:device-width;initial-scale:1;">
-        <link rel="stylesheet" type="text/css" media="all" href="bootstrap/dist/css/bootstrap.css">
-        <link rel="stylesheet" type="text/css" media="all" href="bootstrap/dist/css/bootstrap.min.css">
-        <link rel="stylesheet" type="text/css" media="all" href="bootstrap/dist/css/bootstrap-theme.css">e
-        <link rel="stylesheet" type="text/css" media="all" href="bootstrap/dist/css/bootstrap-theme.min.css"> 
+        <link rel="stylesheet" type="text/css" media="all" href="../bootstrap/dist/css/bootstrap.css">
+        <link rel="stylesheet" type="text/css" media="all" href="../bootstrap/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" media="all" href="../bootstrap/dist/css/bootstrap-theme.css">
+        <link rel="stylesheet" type="text/css" media="all" href="../bootstrap/dist/css/bootstrap-theme.min.css"> 
     </head>
-    <body style="background-image:url('img/background.jpg');background-repeat:no-repeat;background-size:cover; ">
+    <body style="background-image:url('../img/background.jpg');background-repeat:no-repeat;background-size:cover; ">
         <div style="width:100%; height:300px; font-size:15;margin-top:50px; opacity:0.9; border:1px; text-align:center;">
            	<p style="font-size:60">
            		Title Goes Here!
-           		<img src ="img/icon.png" height="80px" width="80px">
+           		<img src ="../img/icon.png" height="80px" width="80px">
             </p>
 			<div class="col-lg-4 col-sm-8 col-sm-offset-2 col-lg-offset-4">
                 <div style="margin-top:80px;" class="row">
@@ -25,7 +25,7 @@
                             </h4>
                         </div>
                     	<div class="panel-body">
-                      		<form class="form-inline" action="php/file-print.php" method="post">
+                      		<form class="form-inline" action="../php/file-print.php" method="post">
                         		<div class="form-group">
                                 <input type="file" name="file">
                                 <br><br> 
