--- a/html/wrong.html
+++ b/html/wrong.html
@@ -5,18 +5,15 @@
         </title>
         <meta charset ="UTF-8">
         <meta viewport="width:device-width;initial-scale:1;">
-        <link rel="stylesheet" type="text/css" media="all" href="bootstrap/dist/css/bootstrap.css">
-        <link rel="stylesheet" type="text/css" media="all" href="bootstrap/dist/css/bootstrap.min.css">
-        <link rel="stylesheet" type="text/css" media="all" href="bootstrap/dist/css/bootstrap-theme.css">
-        <link rel="stylesheet" type="text/css" media="all" href="bootstrap/dist/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" type="text/css" media="all" href="../bootstrap/dist/css/bootstrap.css">
+        <link rel="stylesheet" type="text/css" media="all" href="../bootstrap/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" media="all" href="../bootstrap/dist/css/bootstrap-theme.css">
+        <link rel="stylesheet" type="text/css" media="all" href="../bootstrap/dist/css/bootstrap-theme.min.css">
     </head>
-    <body style="background-image:url('img/background.jpg');background-repeat:no-repeat;background-size:cover;">
-    	<!--<script src="main.js"></script>-->
+    <body style="background-image:url('../img/background.jpg');background-repeat:no-repeat;background-size:cover;">
     	<script "javascript">
     		function UserValidation(){
 				var username;
-				var info;
-
 				username = document.forms["auth"]["username"].value;
 
 				if(isNaN(username)||username<100000000||username>1000000000){
@@ -27,18 +24,18 @@
                     return true;
 				}
 			}
-			</script>
+		</script>
         <div style="width:100%; height:300px; font-size:15;margin-top:50px; opacity:1.0; border:1px; text-align:center;">
            	<p style="font-size:60;font-color:black;">
            		Title Goes Here!
-           		<img src ="img/icon.png" height="80px" width="80px">
+           		<img src ="../img/icon.png" height="80px" width="80px">
             </p>
 			<div class="col-lg-4 col-sm-8 col-sm-offset-2 col-lg-offset-4">
                 <div style="margin-top:80px;" class="row">
-                    <div class="panel panel-primary">
+                    <div class="panel panel-danger">
                         <div class="panel-heading">
                             <h4 id="login">
-                            	Login.
+                            	Wrong Username and Password
                             </h4>
                         </div>
                     	<div class="panel-body">
