--- a/html/wrong.html
+++ b/html/wrong.html
@@ -39,7 +39,7 @@
                             </h4>
                         </div>
                     	<div class="panel-body">
-                      		<form name="auth" class="form-inline" action="php/Authentication.php" method="post" onsubmit="return UserValidation()">
+                      		<form name="auth" class="form-inline" action="../php/Authentication.php" method="post" onsubmit="return UserValidation()">
                         		<div class="form-group">
                         			<label for="un">
                         				Username
