--- a/html/success.html
+++ b/html/success.html
@@ -26,7 +26,9 @@
                 <div style="margin-top:80px;" class="row">
                     <div class="panel panel-success">
                         <div class="panel-heading">
-                          <?php include "../php/user.php"; ?>
+                          <h4>
+                            File successfully queued. Print Another File.
+                          </h4>
                         </div>
                     	<div class="panel-body">
                       		<form class="form-inline" action="../php/file-print.php" method="post" enctype="multipart/form-data">
