--- a/html/unsuccess.html
+++ b/html/unsuccess.html
@@ -24,9 +24,11 @@
             </p>
 			<div class="col-lg-4 col-sm-8 col-sm-offset-2 col-lg-offset-4">
                 <div style="margin-top:80px;" class="row">
-                    <div class="panel panel-success">
+                    <div class="panel panel-danger">
                         <div class="panel-heading">
-                          <?php include "../php/user.php"; ?>
+                          <h4>
+                            Something Went Wrong!. Try Again.
+                          </h4>
                         </div>
                     	<div class="panel-body">
                       		<form class="form-inline" action="../php/file-print.php" method="post" enctype="multipart/form-data">
